--- a/real.cabal
+++ b/real.cabal
@@ -4,13 +4,13 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           real fuck the system
+name:           real
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/real#readme>
 homepage:       https://github.com/githubuser/real#readme
 bug-reports:    https://github.com/githubuser/real/issues
-author:         Thinkjazz
-maintainer:     takeacutter@gmail.com
+author:         Author name here
+maintainer:     example@example.com
 copyright:      2022 Author name here
 license:        BSD3
 license-file:   LICENSE
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/thinkjazz/haskell-simple
+  location: https://github.com/githubuser/real
 
 library
   exposed-modules:
